--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
 
-    <img src="./me2.jpg" alt="Baye Elimane Ka" height="200px" width="200px">
+    <img src="./images/me2.jpg" alt="Baye Elimane Ka" height="200px" width="200px">
 
     <h1>Elimane Ka</h1>
 
@@ -27,7 +27,14 @@
 
 </div>
 <div class="galerie">
-    <img src="" alt="">
+    <img src="./images/html.jpeg" alt="html">
+    <img src="./images/css.jpeg" alt="css">
+    <img src="./images/js.jpeg" alt="js">
+    <img src="./images/python.jpeg" alt="python">
+    <img src="./images/php.jpeg" alt="php">
+    <img src="./images/django.jpeg" alt="django">
+    <img src="./images/intellij.jpeg" alt="intellij">
+    <img src="./images/openvpn.jpeg" alt="openvpn">
 </div>
 </body>
 </html>
