--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <div class="container">
 
     <img src="./images/me2.jpg" alt="Baye Elimane Ka" height="200px" width="200px">
+    <hr>
 
     <h1>Elimane Ka</h1>
+    <br><br>
 
-    <p>Salut, je me nomme Elimane Ka, je suis étudiant en 3eme année à l'ESP de Dakar au département génie infromatique. <br>
-    Je suis titulaire d'un Baccalauréat scientifique S2 avec une mention assez bien et d'un diplôme de technicien supérieur en infromatique </p>
-
+    <p>Salut, je me nomme Elimane Ka, <br> je suis étudiant en 3eme année à l'ESP <br> de Dakar au département génie infromatique. <br> </p>
+    <br><br>
     <h2>Compétences</h2>
     <ul>
         <li>Maitrise des languages pour le developpement Web : HTML, CSS, PHP, JS, PYTHON</li>
@@ -24,8 +25,9 @@
         <li>Langues : Français, Anglais</li>
         <li>Outils design : Canva </li>
     </ul>
-
+    <br><br>
 </div>
+<hr>
 <div class="galerie">
     <img src="./images/html.jpeg" alt="html">
     <img src="./images/css.jpeg" alt="css">
