--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Elimane Ka</h1>
     <br><br>
 
-    <p>Salut, je me nomme Elimane Ka, <br> je suis étudiant en 3eme année à l'ESP <br> de Dakar au département génie infromatique. <br> </p>
+    <p id="bio">Salut, je me nomme Elimane Ka, <br> je suis étudiant en 3eme année à l'ESP <br> de Dakar au département génie infromatique. <br> </p>
     <br><br>
     <h2>Compétences</h2>
     <ul>
@@ -27,7 +27,7 @@
     </ul>
     <br><br>
 </div>
-<hr>
+<h2 id="galerie">Images des languages et technos utilisées</h2>
 <div class="galerie">
     <img src="./images/html.jpeg" alt="html">
     <img src="./images/css.jpeg" alt="css">
